--- a/stylesheets/headers.css
+++ b/stylesheets/headers.css
@@ -74,6 +74,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     background-image: url('https://faseehapps.github.io/assets/header-bg.jpg');
     background-size: cover;
     background-position: center;
